--- a/assets/css/post.css
+++ b/assets/css/post.css
@@ -54,7 +54,10 @@ header {
   font-size: 1.4rem;
   font-weight: bolder;
   line-height: 110%;
-  color: var(--white-1);
+  -webkit-background-clip: text;
+  background-clip: text;
+  color: transparent;
+  background-image: var(--linear-gradient-text);
 }
 main {
   margin: 0 auto;
