--- a/assets/css/common.css
+++ b/assets/css/common.css
@@ -7,6 +7,7 @@
   --gray-6: #111111;
   --white-1: #eeeeee;
   --white-2: #a9abb3;
+  --linear-gradient-text: linear-gradient(to right, orange, purple);
 }
 
 @media (prefers-color-scheme: light) {
@@ -20,6 +21,7 @@
     --gray-6: #a9abb3;
     --white-1: #242526;
     --white-2: #242526;
+    --linear-gradient-text: linear-gradient(to right, #C62828, #1A237E);
   }
 }
 
@@ -33,6 +35,7 @@
     --gray-6: #111111;
     --white-1: #eeeeee;
     --white-2: #a9abb3;
+    --linear-gradient-text: linear-gradient(to right, orange, purple);
   }
 }
 
@@ -46,6 +49,7 @@
   --gray-6: #a9abb3;
   --white-1: #242526;
   --white-2: #242526;
+  --linear-gradient-text: linear-gradient(to right, #C62828, #1A237E);
 }
 
 [data-theme="dark"] {
@@ -57,6 +61,7 @@
   --gray-6: #111111;
   --white-1: #eeeeee;
   --white-2: #a9abb3;
+  --linear-gradient-text: linear-gradient(to right, orange, purple);
 }
 
 #category-modal-bg {
