--- a/_includes/head.html
+++ b/_includes/head.html
@@ -23,4 +23,5 @@
   {% if page.layout == "post" %}
   <script defer src="{{site.baseurl}}/assets/js/lbox.js"></script>
   {% endif %}
+  <link rel="icon" class="js-site-favicon" type="image/svg+xml" href="{{site.data.author.dp}}">
 </head>
